src/objects/Folio__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Adjusted__c</fullName>
        <label>Amount Adjusted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged__c</fullName>
        <label>Amount Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Refunded__c</fullName>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_To_Apply__c</fullName>
        <formula>Amount_Charged__c - Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount To Apply</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Folios</relationshipLabel>
        <relationshipName>Folios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Record_Type__c</fullName>
        <formula>Event__r.RecordType.Name</formula>
        <label>Event Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Folios</relationshipLabel>
        <relationshipName>Folios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Block_Sponsoring_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group/Block Sponsoring Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Folios (Group/Block Sponsoring Member)</relationshipLabel>
        <relationshipName>Folios1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Folios</relationshipLabel>
        <relationshipName>Folios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insert_Index__c</fullName>
        <label>Insert Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Folios</relationshipLabel>
        <relationshipName>Folios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Folio</label>
    <nameField>
        <displayFormat>FOLIO-{0000000}</displayFormat>
        <label>Folio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Folios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Folio_to_Closed_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Type__c , &apos;Closed&apos;)  &amp;&amp;  Event__c  &lt;&gt; null &amp;&amp;  ( Event__r.RecordType.Name  = &apos;Sponsored Event&apos;  || Event__r.RecordType.Name  = &apos;Sponsored Event - Child&apos;) &amp;&amp;  NOT(ISPICKVAL ( Event__r.Status__c , &apos;Cancelled&apos;)) &amp;&amp;   Event__r.StartTime__c  &gt;  NOW()</errorConditionFormula>
        <errorMessage>You can&apos;t close this folio because associated reservation is in future and is not cancelled.</errorMessage>
    </validationRules>
</CustomObject>